--- a/comissioning.env.example
+++ b/comissioning.env.example
@@ -13,4 +13,5 @@ CONTAINER_NAME=${IMAGE_NAME}
 HOST_NETWORK_INTERFACE=
 
 # The static IP address you want to assign to the container on the macvlan network.
+# ROS_STATIC_IP considers 192.168.28.201 and 192.168.28.202 to be in the network. One should be assigned to ctlrx, and another to this container.
 CONTAINER_MACVLAN_IP=192.168.28.201
