adjust docker files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       ctrlx_macvtap:
         ipv4_address: ${CONTAINER_MACVLAN_IP}
     
-    # x11 forwarding for graphics applications
+    # x11 forwarding
     environment:
       - DISPLAY=$DISPLAY
       - QT_X11_NO_MITSHM=1
@@ -24,7 +24,7 @@ services:
     command: tail -f /dev/null
 
 networks:
-  # to access host network, can be turned off if not necessary
+  # to access host network, probably not needed on deployment
   ctrlx_bridge:
     name: ${CONTAINER_NAME}-bridge
     driver: bridge
@@ -33,7 +33,10 @@ networks:
     driver: macvlan
     name: ${CONTAINER_NAME}-macvtap
     driver_opts:
+      # host must create 192.168.28.x connection to see ctrlx UI and allow
+      # the docker container to tap into the ROS network
       parent: ${HOST_NETWORK_INTERFACE}
     ipam:
       config:
         - subnet: 192.168.28.0/24
+          #gateway: 192.168.28.1 no gateway, we only talk to this subnet
