Fix the internal variable

--- a/comissioning.env.example
+++ b/comissioning.env.example
@@ -2,7 +2,7 @@ IMAGE_REGISTRY_URL=code.b-robotized.com:5050/ctrlx/releases
 
 ROBOT_TYPE=kuka
 IMAGE_NAME=${ROBOT_TYPE}-commission
-IMAGE_VERSION=1.0.0
+IMAGE_TAG=1.0.0
 
 IMAGE_TAG_FULL=${IMAGE_REGISTRY_URL}/${IMAGE_NAME}:${IMAGE_TAG}
 
