--- a/comissioning.env.example
+++ b/comissioning.env.example
@@ -13,5 +13,5 @@ CONTAINER_NAME=${IMAGE_NAME}
 HOST_NETWORK_INTERFACE=
 
 # The static IP address you want to assign to the container on the macvlan network.
-# ROS_STATIC_IP considers 192.168.28.201 and 192.168.28.202 to be in the network. One should be assigned to your PC, and another to this container.
+# ROS_STATIC_PEERS on CtlrX CORE sees only 192.168.28.201 and 192.168.28.202 in the ROS network. Container and PC should use one of these addresses if they wish to participate.
 CONTAINER_MACVLAN_IP=192.168.28.202
