renamed gitlab project

--- a/comissioning.env.example
+++ b/comissioning.env.example
@@ -1,4 +1,4 @@
-IMAGE_REGISTRY_URL=code.b-robotized.com:5050/ctrlx/releases
+IMAGE_REGISTRY_URL=code.b-robotized.com:5050/b-controlled-box/releases
 
 ROBOT_TYPE=kuka
 IMAGE_NAME=${ROBOT_TYPE}-commission
