--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
         ipv4_address: ${CONTAINER_MACVLAN_IP}
     
     # --- X11 Forwarding for GUI Applications (e.g., RViz) ---
+    devices:
+      - /dev/dri:/dev/dri
     environment:
       - DISPLAY=$DISPLAY
       - QT_X11_NO_MITSHM=1
@@ -23,17 +25,16 @@ services:
       # xhost +local:docker
       - /tmp/.docker.xauth:/tmp/.docker.xauth:rw
       
-    devices:
-      - /dev/dri:/dev/dri
+    # allow access to kernel clock services
+    cap_add:
+    - SYS_TIME
     
     # allow container to be interactive
     stdin_open: true
     tty: true
-    # keep container running
-    command: tail -f /dev/null
 
 networks:
-  # This accesses host's network, can remove if not necessary
+  # This accesses host's network, necessary for NTP
   ctrlx_bridge:
     name: ${CONTAINER_NAME}-bridge
     driver: bridge
